Prof Office Hours 7

--- a/Notes/Unit5/Unit5.tex
+++ b/Notes/Unit5/Unit5.tex
@@ -48,7 +48,7 @@
         \item Nobel prize (1963).
     \end{itemize}
     \item Polymer terms:
-    \item \textbf{Number averaged molecular weight}: The quantity $\frac{\sum N_xM_x}{\sum N_x}$, where $N_x$ is the number of chains with molecular weight $x$ and $M_x$ is ?. \emph{Also known as} $\bm{M_N}$.
+    \item \textbf{Number averaged molecular weight}: The quantity $\frac{\sum N_xM_x}{\sum N_x}$, where $N_x$ is the number of chains with $x$ monomers and $M_x$ is the molecular weight of a chain with $x$ monomers. \emph{Also known as} $\bm{M_N}$.
     \item \textbf{Weight averaged molecular weight}: The quantity $\frac{\sum N_xM_x^2}{\sum N_xM_x}$. \emph{Also known as} $\bm{M_w}$.
     \item \textbf{Molecular weight distribution}: The quantity $\frac{M_w}{M_N}$. \emph{Also known as} \textbf{polydispersity index}, \textbf{PDI}.
     \begin{itemize}
@@ -547,6 +547,61 @@
             \item Useful applications of the above reaction in total synthesis: Setting stereochemistry with a catalytic attack, as used in the synthesis of paenilactane B.
         \end{itemize}
         \item This chemistry also works with nitrogen-based nuleophiles.
+    \end{itemize}
+\end{itemize}
+
+
+
+\section{Office Hours (Anderson)}
+\begin{itemize}
+    \item \marginnote{5/17:}Which molecules are anionic in the carbonylation mechanism and why?
+    \begin{itemize}
+        \item They're all anions.
+    \end{itemize}
+    \item What is $M_x$ in the definition of number averaged molecular weight?
+    \begin{itemize}
+        \item $N_x$ is number of chains with $x$ number of monomers. $M_x$ is the molecular weight of a chain with $x$ monomers.
+        \item From the perspective of the video, you could think of $N_x$ as the number of chains with molecular weight $M_x$.
+    \end{itemize}
+    \item Can you explain the oligomerization mechanism?
+    \begin{itemize}
+        \item Oligomerization is baby polymerization (potentially more useful).
+        \item In principle, it could go through a regular insertion mechanism.
+        \item If you have competitive elimination of polymers, your polymers will be shorter on average.
+        \item Butene is a higher value product than oligomers.
+        \item Use half-type mechanisms to balance the stoichiometry. Necessitates bimolecular chemistry in real life.
+    \end{itemize}
+    \item Olefin polymerization catalysts are classically Group 4, $d^0$ metals.
+    \item Homework 5.3:
+    \begin{itemize}
+        \item Use chain walking or chain transfer.
+        \item You'll have a statistical mixture of branches if you're chain walking, so it's not this.
+    \end{itemize}
+    \item Is the catalyst resting state always the one before the step with the highest energy of activation?
+    \begin{itemize}
+        \item The precatalyst can't technically be the resting state because it's an off-cycle intermediate.
+        \item Homework: It's the major species in solution; the other enantiomer being bound.
+        \begin{itemize}
+            \item Each pathway could have a different resting state.
+            \item Recognize what state of the catalyst is sitting in the mixture; draw the two cycles and decide.
+        \end{itemize}
+    \end{itemize}
+    \item \textbf{Principle of microscopic reversibility}: To be mechanistically allowed, a reaction must be irreversible to \emph{some} extent.
+    \item Homework 5.6:
+    \begin{itemize}
+        \item Use either Chalk-Herrod or modified Chalk-Herrod.
+    \end{itemize}
+    \item Midterm 6:
+    \begin{itemize}
+        \item \ce{NR2-} is a $\sigma$ donor and a $\pi$ donor because it has filled $\pi$ orbitals on the nitrogen.
+        \item Phosphines are $\pi$ acids.
+        \item Cp is all three.
+        \item Methyl is a pure $\sigma$ donor.
+        \item Cyclobutadiene is both.
+        \item \ce{O2-} is a $\pi$ donor.
+        \item Draw out like a Lewis structure -- two lone pairs on \ce{NR2-} means filled $\sigma$ and $\pi$ orbitals; \ce{CH3} has only filled $\sigma$ orbitals.
+        \item Orbital diagrams.
+        \item If he wants an MO diagram, he'll say "MO diagram."
     \end{itemize}
 \end{itemize}
 
