--- a/preamble.tex
+++ b/preamble.tex
@@ -13,6 +13,7 @@
 \usepackage{tikz,graphicx}
 \usepackage{float,subcaption}
 \usepackage{tabularx}
+\usepackage{soul}
 \usepackage[hidelinks]{hyperref}
 
 \fancypagestyle{main}{
