Final paper: First draft

--- a/Notes/Unit4/Unit4.tex
+++ b/Notes/Unit4/Unit4.tex
@@ -96,7 +96,7 @@
         \item For reference, free \ce{N2} has a stretching frequency of $\SI{2331}{\per\centi\meter}$.
     \end{itemize}
     \item Yamamoto gives the first example of a dinitrogen complex formed from free \ce{N2} (\ce{HCo(PPh3)3(N2)}).
-    \item Joe Chatz, George Leigh, and Dilworth in Sussex (of the British/American camp), and Hidai and Nishibayashi (of the Japanese camp) became interested in nitrogen fixation following Yamamoto's work.
+    \item Joe Chatt, George Leigh, and Dilworth in Sussex (of the British/American camp), and Hidai and Nishibayashi (of the Japanese camp) became interested in nitrogen fixation following Yamamoto's work.
     \begin{itemize}
         \item Second and third row Group 6 complexes such as molybdenum were the focus.
         \item Example: \ce{MoX4L2 ->[N2, L][Na/Hg] Mo(N2)2L4}.
@@ -131,7 +131,7 @@
     \item Hidai uses silanes: \ce{M(N2)2(PR3)4 ->[TMSI] TMS-N=N-MI(PR3)4 ->[Na, THF][N2] M(N2)2(PR3)4 + NH(TMS)2 + NH3 + NaNH2 + NaNH(TMS)}, etc.
     \item \textcite{bib:SchrockYandulov} creates a well-defined catalyst for nitrogen fixation.
     \begin{itemize}
-        \item The catalyst is molybdenum bound to dinitrogen and a tridentate TREN scaffold anion (with hexaisopropal \emph{tert}-phenyl (HIPT) aryl groups).
+        \item The catalyst is molybdenum bound to dinitrogen and a tridentate TREN scaffold anion (with hexa-iso-propyl-terphenyl (HIPT) aryl groups).
         \item They add eight equivalents of cobaltocene (\ce{CoCp2}), seven equivalents of lutidinium (a pyridinium acid), and the bulky, noncoordinating counteranion \ce{[BAr^F{}_4]-}.
         \item They fish out \ce{Mo-NH3 + NH3}. Reducing the former product gives \ce{Mo^{III}(N2)} with a weak reductant.
         \begin{itemize}
@@ -234,14 +234,14 @@
     \begin{itemize}
         \item Due at noon.
         \item Sophie will post an example paper.
-        \item As the last assignment for this course, you will write a critical review of 1 of 6 availabble papers.
-        \item Some of these papers include material outside the scope of organometallic chemistry. Try to focus on topics relevant to this course. The reviews should be no longer than 700 words not including citations or fiugre captions, althouggh additional ccitations are not requried if you only use information presented in the paper or the class. The critique should be written with Times New Roman 12 point font and 0.5 inch margins.
-        \item General outline fofr the critiques:
+        \item As the last assignment for this course, you will write a critical review of 1 of 6 available papers.
+        \item Some of these papers include material outside the scope of organometallic chemistry. Try to focus on topics relevant to this course. The reviews should be no longer than 700 words not including citations or figure captions, although additional citations are not required if you only use information presented in the paper or the class. The critique should be written with Times New Roman 12 point font and 0.5 inch margins.
+        \item General outline for the critiques:
         \begin{itemize}
-            \item 1 introduction paragraph.
-            \item 2 experimental summary paragraphs.
-            \item 3 discussion paragraphs.
-            \item 4 critique paragraphs.
+            \item Paragraph 1: Introduction.
+            \item Paragraph 2: Experimental summary.
+            \item Paragraph 3: Discussion.
+            \item Paragraph 4: critique.
             \item Figures.
         \end{itemize}
         \item Sophie is willing to look over assignments (email them to her), but we have to get them to her by the 19th for her to take a look.
