--- a/main.bib
+++ b/main.bib
@@ -129,3 +129,35 @@
     year = {2013},
     doi = {10.1038/nature12435}
 }
+
+@article{bib:AllenSenoff,
+    title = {Nitrogenopentammineruthenium({II}) Complexes},
+    author = {A. D. Allen and C. V. Senoff},
+    journal = {Chemistry Communications (London)},
+    number = {24},
+    pages = {621-622},
+    year = {1965},
+    doi = {10.1039/C19650000621}
+}
+
+@article{bib:Yamamoto,
+    title = {Synthesis and Properties of Hydridodinitrogentris(triphenylphosphine)cobalt({I}) and the Related Phosphine-CCobalt Complexes},
+    author = {Akio Yamamoto and Shoji Kitazume and Lyong Sun Pu and Sakuji Ikeda},
+    journal = {Journal of the American Chemical Society},
+    volume = {93},
+    number = {2},
+    pages = {371-380},
+    year = {1971},
+    doi = {10.1021/ja00731a012}
+}
+
+@article{bib:Chatt,
+    title = {Recent Advances in the Chemistry of Nitrogen Fixation},
+    author = {Joseph Chatt and Jonathan R Dilworth and Raymond L Richards},
+    journal = {Chemical Reviews},
+    volume = {78},
+    number = {6},
+    pages = {589-625},
+    year = {1978},
+    doi = {10.1021/cr60316a001}
+}
