--- a/Notes/Unit5/Unit5.tex
+++ b/Notes/Unit5/Unit5.tex
@@ -9,7 +9,7 @@
 
 
 
-\chapter{???}
+\chapter{Even More Catalytic Processes}
 \section{Lecture 18: Olefin Polymerization}
 \begin{itemize}
     \item \marginnote{5/10:}Another huge industrial-scale reaction
@@ -737,6 +737,69 @@
         \item A 2,1-insertion followed by chain walking leads to a net 1,3 insertion, i.e., incorporation of a linear \ce{C3} unit in the polymer. About a third of the time the catalyst undergoes 2,1-insertion, resulting in a chain-straightened polypropylene.
     \end{itemize}
     \item \ce{CF3} is a strong electron withdrawing group, and will affect the electrons of the phenyl group. \ce{C-F} bonds are also stronger than \ce{C-H} bonds. Fluorine makes organic compounds more lipophilic, and more hydrophobic.
+\end{itemize}
+
+
+
+\section{Homework 5 One-On-One (Anderson)}
+\begin{itemize}
+    \item Homework 5.3:
+    \begin{itemize}
+        \item What do you mean, "what distribution of branch lengths do you expect for your mechanism?"
+        \begin{itemize}
+            \item Explain why your mechanism consistent with the expected distribution of branch lengths.
+        \end{itemize}
+    \end{itemize}
+    \item Homework 5.4:
+    \begin{itemize}
+        \item How exactly does the transfer take place? What attacks what? Where do the groups bend and why?
+        \begin{itemize}
+            \item Use your hand as a propylene. When the methyl points away from the polymer, that's not good. We want the mathyl pointing towards the polymer. The face that is bound to the metal center is attacked by the alkyl group in matallocene catalysts. External nucleophiles in other reactions attack from the outside. This is very much related to $\sigma$-bond metathesis.
+        \end{itemize}
+    \end{itemize}
+    \item Homework 5.5:
+    \begin{itemize}
+        \item Activation step?
+        \begin{itemize}
+            \item What I have is correct.
+        \end{itemize}
+        \item Charge on \ce{Pd}?
+        \begin{itemize}
+            \item Neutral.
+        \end{itemize}
+        \item Does \ce{MeCN} bond datively?
+        \begin{itemize}
+            \item Yes.
+        \end{itemize}
+        \item Ridiculous arrow pushing step?
+        \begin{itemize}
+            \item It's ok to have so much stuff happen because it's a concerted reaction. It dooesn't have to be concerted, but it can be. Tertiary collisions are bad, but intramolecular is fine.
+        \end{itemize}
+        \item 2-coordinate species?
+        \begin{itemize}
+            \item Keep it tetrasolvated.
+        \end{itemize}
+        \item Shannon Stahl is applying the Wacker oxidation to many things. Aerobic oxidations with palladium.
+    \end{itemize}
+    \item Homework 5.6-\textbf{3}:
+    \begin{itemize}
+        \item Alkynes?
+        \begin{itemize}
+            \item Instead of reductive eliminations, use $\beta$-\ce{H} elimination to get a dihydride metal species.
+        \end{itemize}
+    \end{itemize}
+    \item Misc. test thoughts.
+    \begin{itemize}
+        \item He likes bonus reactions. What bonds are being formed? Our Pd cycles from 0 to II. Think of it like a mathematical proof. You've got a toolbox of things that you can do and just see if it gets you closer. So (A) leave it to the end of the test and (B) just try to keep track of electrons, oxidative addition, reductive elimination, etc.
+    \end{itemize}
+    \item Misc. thoughts on the class.
+    \begin{itemize}
+        \item 201 is a class that builds up. 202 draws on a lot of background knowledge and chemical intuition that takes time to develop.
+    \end{itemize}
+    \item Thoughts on PChem.
+    \begin{itemize}
+        \item PChem is pretty self-contained. Talk with the instructors.
+    \end{itemize}
 \end{itemize}
 
 
