--- a/PSets/psets.tex
+++ b/PSets/psets.tex
@@ -49,6 +49,12 @@
 
 
 
+\section{Even More Catalytic Processes}
+\subfile{PSet5/pset5.tex}
+\newpage
+
+
+
 \renewcommand{\leftmark}{References}
 \printbibliography[heading=bibintoc]
 
