--- a/main.bib
+++ b/main.bib
@@ -161,3 +161,14 @@
     year = {1978},
     doi = {10.1021/cr60316a001}
 }
+
+@article{bib:HalpernHydrogenation,
+    title = {Asymmetric Hydrogenation of Methyl-(Z)-$\alpha$-accetamidocinnamate Catalyzed by \ce{\{{1,2}-Bis((phenyl-o-anisoyl)phosphino)ethane\}rhodium}({I}): Kinetics, Mechanism, and Origin of Enantioselection},
+    author = {Clark R Landis and Jack Halpern},
+    journal = {Journal of the American Chemical Society},
+    volume = {109},
+    number = {6},
+    pages = {1746-1754},
+    year = {1987},
+    doi = {10.1021/ja00240a025}
+}
