--- a/preamble.tex
+++ b/preamble.tex
@@ -39,6 +39,8 @@
 
 \setitemize[3]{label={\scriptsize$\blacksquare$}}
 
+\DeclareSIUnit{\angstrom}{\textup{\AA}}
+
 \setchemfig{atom sep=2em,fixed length=true,bond offset=3pt,cram width=3pt}
 
 \usetikzlibrary{decorations.markings,backgrounds,arrows.meta}
